fix offcanvas spec fixture

--- a/test/fixtures/html/offcanvasNav.spec.html
+++ b/test/fixtures/html/offcanvasNav.spec.html
@@ -25,6 +25,9 @@
     background-color:rgba(0,0,0,0);
     cursor:pointer;
   }
+  .flyout-cover.active {
+    z-index: 100;
+  }
   .page{
     background-color:#0088cc;
     position:relative;
