--- a/test/results/units.html
+++ b/test/results/units.html
@@ -9,14 +9,14 @@
     <h1>Unit Test Results</h1>
     <section>
       <header class="overview">
-        <div class="browser">Browser: Chrome 52.0.2743 (Mac OS X 10.11.6)</div>
-        <div class="timestamp">Timestamp: 8/16/2016, 4:52:34 PM</div>
+        <div class="browser">Browser: Firefox 45.0.0 (Mac OS X 10.11.0)</div>
+        <div class="timestamp">Timestamp: 8/18/2016, 1:05:01 PM</div>
         <p class="results">
           55 tests / 
           0 errors / 
           0 failures / 
           0 skipped / 
-          runtime: 1.218s
+          runtime: 1.002s
         </p>
       </header>
       <div class="spec spec--pass" style="">
@@ -25,7 +25,7 @@
             <p class="spec__suite">App Module:</p>
             <em class="spec__descrip">should be registered</em>
           </div>
-          <div class="spec__status">Passed in 0.004s</div>
+          <div class="spec__status">Passed in 0.002s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -34,7 +34,7 @@
             <p class="spec__suite">App Module: &raquo; Dependencies:</p>
             <em class="spec__descrip">should have ngSanitize as a dependency</em>
           </div>
-          <div class="spec__status">Passed in 0.002s</div>
+          <div class="spec__status">Passed in 0.001s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -52,7 +52,7 @@
             <p class="spec__suite">App Module: &raquo; Dependencies:</p>
             <em class="spec__descrip">should have services.log as a dependency</em>
           </div>
-          <div class="spec__status">Passed in 0.001s</div>
+          <div class="spec__status">Passed in 0s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -70,7 +70,7 @@
             <p class="spec__suite">App Module: &raquo; Dependencies:</p>
             <em class="spec__descrip">should have services.navigation as a dependency</em>
           </div>
-          <div class="spec__status">Passed in 0s</div>
+          <div class="spec__status">Passed in 0.002s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -88,7 +88,7 @@
             <p class="spec__suite">App Module: &raquo; Dependencies:</p>
             <em class="spec__descrip">should have app.work as a dependency</em>
           </div>
-          <div class="spec__status">Passed in 0.002s</div>
+          <div class="spec__status">Passed in 0.001s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -106,7 +106,7 @@
             <p class="spec__suite">validate enums</p>
             <em class="spec__descrip">should be exist</em>
           </div>
-          <div class="spec__status">Passed in 0.021s</div>
+          <div class="spec__status">Passed in 0.009s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -115,7 +115,7 @@
             <p class="spec__suite">validate data</p>
             <em class="spec__descrip">should have valid work.json data</em>
           </div>
-          <div class="spec__status">Passed in 0.002s</div>
+          <div class="spec__status">Passed in 0.001s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -133,7 +133,7 @@
             <p class="spec__suite">validate data</p>
             <em class="spec__descrip">should have valid icons.json data</em>
           </div>
-          <div class="spec__status">Passed in 0.001s</div>
+          <div class="spec__status">Passed in 0s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -142,7 +142,7 @@
             <p class="spec__suite">Unit: Testing WorkCtrl</p>
             <em class="spec__descrip">should be properly initialized</em>
           </div>
-          <div class="spec__status">Passed in 0.038s</div>
+          <div class="spec__status">Passed in 0.029s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -151,7 +151,7 @@
             <p class="spec__suite">Unit: Testing WorkCtrl</p>
             <em class="spec__descrip">should load a project</em>
           </div>
-          <div class="spec__status">Passed in 0.017s</div>
+          <div class="spec__status">Passed in 0.013s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -160,7 +160,7 @@
             <p class="spec__suite">Unit: Testing WorkCtrl</p>
             <em class="spec__descrip">should projectIncrement</em>
           </div>
-          <div class="spec__status">Passed in 0.007s</div>
+          <div class="spec__status">Passed in 0.012s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -169,7 +169,7 @@
             <p class="spec__suite">Unit: Testing WorkCtrl</p>
             <em class="spec__descrip">should unload project</em>
           </div>
-          <div class="spec__status">Passed in 0.012s</div>
+          <div class="spec__status">Passed in 0.008s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -178,7 +178,7 @@
             <p class="spec__suite">Unit: Testing WorkCtrl</p>
             <em class="spec__descrip">should load second project after first project</em>
           </div>
-          <div class="spec__status">Passed in 0.015s</div>
+          <div class="spec__status">Passed in 0.014s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -187,7 +187,7 @@
             <p class="spec__suite">angularBindHtml</p>
             <em class="spec__descrip">should filter allow unsafe HTML</em>
           </div>
-          <div class="spec__status">Passed in 0.03s</div>
+          <div class="spec__status">Passed in 0.016s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -196,7 +196,7 @@
             <p class="spec__suite">A tag override for _blank targets</p>
             <em class="spec__descrip">should add a blank target</em>
           </div>
-          <div class="spec__status">Passed in 0.005s</div>
+          <div class="spec__status">Passed in 0.007s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -205,7 +205,7 @@
             <p class="spec__suite">A tag override for _blank targets</p>
             <em class="spec__descrip">should not add a blank target to link without http in front</em>
           </div>
-          <div class="spec__status">Passed in 0.008s</div>
+          <div class="spec__status">Passed in 0.005s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -214,7 +214,7 @@
             <p class="spec__suite">A tag override for _blank targets</p>
             <em class="spec__descrip">should not add a blank target to link with existing target</em>
           </div>
-          <div class="spec__status">Passed in 0.004s</div>
+          <div class="spec__status">Passed in 0.006s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -223,7 +223,7 @@
             <p class="spec__suite">Unit: Testing directives.image</p>
             <em class="spec__descrip">should have caption</em>
           </div>
-          <div class="spec__status">Passed in 0.006s</div>
+          <div class="spec__status">Passed in 0.01s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -232,7 +232,7 @@
             <p class="spec__suite">Unit: Testing directives.image</p>
             <em class="spec__descrip">should have image</em>
           </div>
-          <div class="spec__status">Passed in 0.005s</div>
+          <div class="spec__status">Passed in 0.008s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -241,7 +241,7 @@
             <p class="spec__suite">Unit: Testing directives.image</p>
             <em class="spec__descrip">should have no caption</em>
           </div>
-          <div class="spec__status">Passed in 0.005s</div>
+          <div class="spec__status">Passed in 0.006s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -250,7 +250,7 @@
             <p class="spec__suite">utilHover directive</p>
             <em class="spec__descrip">should add "js-hover" class and util-hover attribute as class</em>
           </div>
-          <div class="spec__status">Passed in 0.007s</div>
+          <div class="spec__status">Passed in 0.006s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -259,7 +259,7 @@
             <p class="spec__suite">utilHover directive</p>
             <em class="spec__descrip">should be configurable via options attribute</em>
           </div>
-          <div class="spec__status">Passed in 0.006s</div>
+          <div class="spec__status">Passed in 0.005s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -268,7 +268,7 @@
             <p class="spec__suite">Unit: Testing directives.youtubeEmbed</p>
             <em class="spec__descrip">should embed iframe, with src including video id</em>
           </div>
-          <div class="spec__status">Passed in 0.847s</div>
+          <div class="spec__status">Passed in 0.66s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -295,7 +295,7 @@
             <p class="spec__suite">unsafeHtml</p>
             <em class="spec__descrip">should filter allow unsafe HTML</em>
           </div>
-          <div class="spec__status">Passed in 0.005s</div>
+          <div class="spec__status">Passed in 0.006s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -304,7 +304,7 @@
             <p class="spec__suite">Unit: Testing services.log</p>
             <em class="spec__descrip">should exist</em>
           </div>
-          <div class="spec__status">Passed in 0.001s</div>
+          <div class="spec__status">Passed in 0.003s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -313,7 +313,7 @@
             <p class="spec__suite">Unit: Testing services.navigation</p>
             <em class="spec__descrip">scrollspy plugin should exist</em>
           </div>
-          <div class="spec__status">Passed in 0.008s</div>
+          <div class="spec__status">Passed in 0.006s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -331,7 +331,7 @@
             <p class="spec__suite">assignBtnHover</p>
             <em class="spec__descrip">should attached add/remove classes on hover - for an inner target</em>
           </div>
-          <div class="spec__status">Passed in 0.004s</div>
+          <div class="spec__status">Passed in 0.006s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -340,7 +340,7 @@
             <p class="spec__suite">Window Scrolling &raquo; getScrollTop</p>
             <em class="spec__descrip">should get accurate scrollTop value</em>
           </div>
-          <div class="spec__status">Passed in 0.008s</div>
+          <div class="spec__status">Passed in 0.015s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -349,7 +349,7 @@
             <p class="spec__suite">Window Scrolling &raquo; scrollAnimateTo Suite &raquo; scrollAnimateTo</p>
             <em class="spec__descrip">should change page scroll based on numeric value</em>
           </div>
-          <div class="spec__status">Passed in 0.017s</div>
+          <div class="spec__status">Passed in 0.008s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -358,7 +358,7 @@
             <p class="spec__suite">Window Scrolling &raquo; scrollAnimateTo Suite &raquo; scrollAnimateTo</p>
             <em class="spec__descrip">should change page scroll based on anchor</em>
           </div>
-          <div class="spec__status">Passed in 0.009s</div>
+          <div class="spec__status">Passed in 0.007s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -367,7 +367,7 @@
             <p class="spec__suite">Window Scrolling &raquo; scrollAnimateTo Suite &raquo; scrollAnimateTo</p>
             <em class="spec__descrip">should dispatch complete event</em>
           </div>
-          <div class="spec__status">Passed in 0.011s</div>
+          <div class="spec__status">Passed in 0.01s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -394,7 +394,7 @@
             <p class="spec__suite">basic functions</p>
             <em class="spec__descrip">should initialize</em>
           </div>
-          <div class="spec__status">Passed in 0.015s</div>
+          <div class="spec__status">Passed in 0.012s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -412,7 +412,7 @@
             <p class="spec__suite">basic functions</p>
             <em class="spec__descrip">should slide open when calling .open()</em>
           </div>
-          <div class="spec__status">Passed in 0.005s</div>
+          <div class="spec__status">Passed in 0.004s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -421,7 +421,7 @@
             <p class="spec__suite">basic functions</p>
             <em class="spec__descrip">should slide closed when calling .close()</em>
           </div>
-          <div class="spec__status">Passed in 0.004s</div>
+          <div class="spec__status">Passed in 0.005s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -430,7 +430,7 @@
             <p class="spec__suite">basic functions</p>
             <em class="spec__descrip">should slide open when clicking toggle button (when closed)</em>
           </div>
-          <div class="spec__status">Passed in 0.003s</div>
+          <div class="spec__status">Passed in 0.005s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -439,7 +439,7 @@
             <p class="spec__suite">basic functions</p>
             <em class="spec__descrip">should slide closed when clicking content cover (when open)</em>
           </div>
-          <div class="spec__status">Passed in 0.02s</div>
+          <div class="spec__status">Passed in 0.014s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -448,7 +448,7 @@
             <p class="spec__suite">basic functions</p>
             <em class="spec__descrip">should slide closed when clicking inner link in nav (when open)</em>
           </div>
-          <div class="spec__status">Passed in 0.004s</div>
+          <div class="spec__status">Passed in 0.005s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -457,7 +457,7 @@
             <p class="spec__suite">basic functions</p>
             <em class="spec__descrip">should reflect state via getIsOpen</em>
           </div>
-          <div class="spec__status">Passed in 0.003s</div>
+          <div class="spec__status">Passed in 0.008s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -466,7 +466,7 @@
             <p class="spec__suite">basic functions</p>
             <em class="spec__descrip">should close when orientation changes</em>
           </div>
-          <div class="spec__status">Passed in 0.006s</div>
+          <div class="spec__status">Passed in 0.009s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -475,7 +475,7 @@
             <p class="spec__suite">basic functions</p>
             <em class="spec__descrip">cover should be draggable</em>
           </div>
-          <div class="spec__status">Passed in 0.005s</div>
+          <div class="spec__status">Passed in 0.006s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -484,7 +484,7 @@
             <p class="spec__suite">basic functions</p>
             <em class="spec__descrip">cover should be draggable, and stay open if dragged to right and released</em>
           </div>
-          <div class="spec__status">Passed in 0.009s</div>
+          <div class="spec__status">Passed in 0.011s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -493,7 +493,7 @@
             <p class="spec__suite">basic functions</p>
             <em class="spec__descrip">cover should be draggable, and stay open if dragged to left &lt; 25%</em>
           </div>
-          <div class="spec__status">Passed in 0.006s</div>
+          <div class="spec__status">Passed in 0.009s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -502,7 +502,7 @@
             <p class="spec__suite">basic functions</p>
             <em class="spec__descrip">cover should be draggable, and close if dragged to left &gt; 25%</em>
           </div>
-          <div class="spec__status">Passed in 0.006s</div>
+          <div class="spec__status">Passed in 0.007s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -511,7 +511,7 @@
             <p class="spec__suite">basic functions</p>
             <em class="spec__descrip">should close when window gets smaller than breakpoint</em>
           </div>
-          <div class="spec__status">Passed in 0.005s</div>
+          <div class="spec__status">Passed in 0.006s</div>
         </h3>
       </div>
     </section>
